third_party/move/move-compiler/tests/move_check/typing/main_return_type_not_unit.move
script {
// despite script functions no longer have any built in checks,
// scripts still do not support return values
fun main(): u64 {
    0
}
}
